color changes and wrap issue completed

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2207,7 +2207,7 @@ Mobile and iPad Navigation
   height: 24px;
   text-align: center;
   transition: all 1s;
-  color: #001a71;
+  color: #3A3E41;
   font-size: 30px;
   display: flex;
   align-items: flex-end;
@@ -2440,7 +2440,7 @@ video{
 //   margin: auto;
 // }
 .category-card label{
-  color: #001a71;
+  color: #3A3E41;
     font-weight: 800;
     font-family: "sofia-pro-bold";
     font-size: 16px;
